manifests/agones/Deployment-agones-extensions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agones
    chart: agones-1.56.0
    component: extensions
    heritage: Helm
    release: agones
  name: agones-extensions
  namespace: agones-system
spec:
  replicas: 2
  selector:
    matchLabels:
      agones.dev/role: extensions
      app: agones
      heritage: Helm
      release: agones
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        revision/tls-cert: "1"
      labels:
        agones.dev/role: extensions
        app: agones
        heritage: Helm
        release: agones
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: agones.dev/agones-system
                    operator: Exists
              weight: 1
      containers:
        - env:
            - name: PROMETHEUS_EXPORTER
              value: "false"
            - name: STACKDRIVER_EXPORTER
              value: "false"
            - name: STACKDRIVER_LABELS
              value: ""
            - name: GCP_PROJECT_ID
              value: ""
            - name: NUM_WORKERS
              value: "100"
            - name: API_SERVER_QPS
              value: "400"
            - name: API_SERVER_QPS_BURST
              value: "500"
            - name: LOG_LEVEL
              value: info
            - name: FEATURE_GATES
              value: ""
            - name: ALLOCATION_BATCH_WAIT_TIME
              value: 500ms
            - name: CLOUD_PRODUCT
              value: auto
            - name: LOG_DIR
              value: /logs
            - name: LOG_SIZE_LIMIT_MB
              value: "10000"
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: CONTAINER_NAME
              value: agones-extensions
            - name: READINESS_SHUTDOWN_DURATION
              value: 18s
            - name: WEBHOOK_PORT
              value: "8081"
            - name: HTTP_PORT
              value: "8080"
          image: us-docker.pkg.dev/agones-images/release/agones-extensions:1.56.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 1
          name: agones-extensions
          ports:
            - containerPort: 8081
              name: webhooks
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            limits:
              ephemeral-storage: 10100Mi
            requests:
              ephemeral-storage: 10100Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /certs
              name: certs
              readOnly: true
            - mountPath: /logs
              name: logs
              readOnly: false
      priorityClassName: agones-system
      serviceAccountName: agones-controller
      terminationGracePeriodSeconds: 27
      tolerations:
        - effect: NoExecute
          key: agones.dev/agones-system
          operator: Equal
          value: "true"
      volumes:
        - name: certs
          secret:
            secretName: agones-cert
        - emptyDir: {}
          name: logs
