manifests/agones/Deployment-agones-ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agones
    chart: agones-1.56.0
    component: ping
    heritage: Helm
    release: agones
  name: agones-ping
  namespace: agones-system
spec:
  replicas: 2
  selector:
    matchLabels:
      agones.dev/role: ping
      app: agones
      heritage: Helm
      release: agones
  template:
    metadata:
      labels:
        agones.dev/role: ping
        app: agones
        heritage: Helm
        release: agones
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: agones.dev/agones-system
                    operator: Exists
              weight: 1
      containers:
        - env:
            - name: HTTP_RESPONSE
              value: ok
            - name: UDP_RATE_LIMIT
              value: "20"
            - name: FEATURE_GATES
              value: ""
          image: us-docker.pkg.dev/agones-images/release/agones-ping:1.56.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /live
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 1
          name: agones-ping
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
      priorityClassName: agones-system
      tolerations:
        - effect: NoExecute
          key: agones.dev/agones-system
          operator: Equal
          value: "true"
