manifests/agones/Service-agones-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    agones.dev/role: extensions
    app: agones
    chart: agones-1.56.0
    heritage: Helm
    release: agones
  name: agones-controller-service
  namespace: agones-system
spec:
  ports:
    - name: webhooks
      port: 443
      targetPort: webhooks
    - name: web
      port: 8080
      targetPort: http
  selector:
    agones.dev/role: extensions
