manifests/agones/Service-agones-ping-udp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agones
    chart: agones-1.56.0
    component: ping
    heritage: Helm
    release: agones
  name: agones-ping-udp-service
  namespace: agones-system
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: udp
      port: 50000
      protocol: UDP
      targetPort: 8080
  selector:
    agones.dev/role: ping
  type: LoadBalancer
