manifests/agones/MutatingWebhookConfiguration-agones-mutation-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: agones
    chart: agones-1.56.0
    component: controller
    heritage: Helm
    release: agones
  name: agones-mutation-webhook
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lSQVBFRFdpbUdjQkFERkZxdVNKaFJlMTh3RFFZSktvWklodmNOQVFFTEJRQXcKSWpFZ01CNEdBMVVFQXhNWFlXUnRhWE56YVc5dUxXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qWXdNekUzTWpFegpNREF4V2hjTk16WXdNekUwTWpFek1EQXhXakFpTVNBd0hnWURWUVFERXhkaFpHMXBjM05wYjI0dFkyOXVkSEp2CmJHeGxjaTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTDdXZDN3VElma0UKVUY4eFpqRGlkQXpidzhnM01CaGp6TE9JUEhuSzQ3bUhQVW5uRURJVHVHZERZeExYbHhGRzR6V2hYVFg2R0VZdQo0bnlTN05IdGcx [...]
      service:
        name: agones-controller-service
        namespace: agones-system
        path: /mutate
    failurePolicy: Fail
    name: mutations.agones.dev
    rules:
      - apiGroups:
          - agones.dev
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - gameservers
          - fleets
      - apiGroups:
          - autoscaling.agones.dev
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - fleetautoscalers
    sideEffects: None
