manifests/agones/MutatingWebhookConfiguration-zzz-agones-mutation-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: agones
    chart: agones-1.56.0
    component: controller
    heritage: Helm
    release: agones
  name: zzz-agones-mutation-webhook
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMekNDQWhlZ0F3SUJBZ0lRVjEyQVh1eDhTQkNWTDl6SGhOd3REakFOQmdrcWhraUc5dzBCQVFzRkFEQWkKTVNBd0hnWURWUVFERXhkaFpHMXBjM05wYjI0dFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweU5qQXpNVGN4TVRRegpNRFZhRncwek5qQXpNVFF4TVRRek1EVmFNQ0l4SURBZUJnTlZCQU1URjJGa2JXbHpjMmx2YmkxamIyNTBjbTlzCmJHVnlMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF5ZklJYUN1ckxIMVQKMVd3emhnWDYvd3RYOXRXK2RZNjdQZFNhQWxJZnh1STRyaVBaaSs2WTF0VDd3YUpGSGdIQ0hFeFZtL3c2S2tNZApyb3pUNFkxdElW [...]
      service:
        name: agones-controller-service
        namespace: agones-system
        path: /mutate
    failurePolicy: Fail
    name: mutations.agones.dev
    objectSelector:
      matchLabels:
        agones.dev/port: autopilot-passthrough
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
