manifests/agones/ValidatingWebhookConfiguration-agones-validation-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: agones
    chart: agones-1.56.0
    component: controller
    heritage: Helm
    release: agones
  name: agones-validation-webhook
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMekNDQWhlZ0F3SUJBZ0lRWFBxNEhuNTdOc0FXSDAvR3UzY09BREFOQmdrcWhraUc5dzBCQVFzRkFEQWkKTVNBd0hnWURWUVFERXhkaFpHMXBjM05wYjI0dFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweU5qQTBNVFF5TURFNQpNalphRncwek5qQTBNVEV5TURFNU1qWmFNQ0l4SURBZUJnTlZCQU1URjJGa2JXbHpjMmx2YmkxamIyNTBjbTlzCmJHVnlMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF4UjVnYTRaUDN1UlIKcTNnd1BmRmxnQUZBNVIrc0pzQmdSSGxBTVZ4NGljd0JzN0xXc2QzOU81NDVQU1JQU3ZHMXErRlJFZHRES1doagpPRFFSSktqSkJq [...]
      service:
        name: agones-controller-service
        namespace: agones-system
        path: /validate
    failurePolicy: Fail
    name: validations.agones.dev
    rules:
      - apiGroups:
          - agones.dev
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - fleets
          - gameservers
          - gameserversets
      - apiGroups:
          - agones.dev
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - fleets
          - gameserversets
      - apiGroups:
          - autoscaling.agones.dev
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - fleetautoscalers
    sideEffects: None
